--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0px;
     padding: 0px;
@@ -5,30 +6,39 @@
     outline: none;
 }
 
+
+
+body{
+    justify-content: center;
+}
+
 h1{
     text-align: center;
-    color: red;
+    color:#f7c41f;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 5px;
 }
 
 h2{
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 5px;
 }
 
 h3{
+    padding: 15px;
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
-/* #img{
-    justify-items: center;
-} */
+
 
 p{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-
 .content{
     display: flex;
-    justify-content: column;
+    justify-content: center;
     
 }
 
@@ -55,3 +65,11 @@ a{
    align-items: center;
 }
 
+form.sub{
+    padding-top: 10px;
+    width: 50%;
+    color: black;
+    border-bottom:black;
+    align-items: center;
+    padding-left: 50%;
+}
