--- a/style/style-home.css
+++ b/style/style-home.css
@@ -21,9 +21,9 @@ p{
 }
 
 button {
-  background-color: #e0dcb8; /* Green */
-  border: none;
-  color: black;
+  background-color:#B4BEC9; 
+  color: grey;
+  border-color: grey;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
